[package]
name = "client"
version = "0.1.0"
authors = ["gabriel <gabrielgoller123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
reqwest = "0.10.8"
tokio = { version = "0.2", features = ["macros"] }
